[gd_scene load_steps=4 format=3 uid="uid://pxfduykbiusj"]

[ext_resource type="Script" uid="uid://devnyddslecsk" path="res://Scenes/pause_menu.gd" id="1_emv3i"]
[ext_resource type="PackedScene" uid="uid://67ccaeypt8jq" path="res://Scenes/options.tscn" id="2_k0w1u"]
[ext_resource type="AudioStream" uid="uid://de0ss7de6ubsb" path="res://Assets/ClickSFX.wav" id="3_1och7"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_emv3i")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="Pannel" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.37
anchor_top = 0.2
anchor_right = 0.63
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.65098)

[node name="ContinueButton" type="Button" parent="."]
offset_left = 494.0
offset_top = 220.0
offset_right = 782.0
offset_bottom = 324.0
theme_override_font_sizes/font_size = 50
text = "CONTINUE"

[node name="OptionsButton" type="Button" parent="."]
offset_left = 494.0
offset_top = 383.0
offset_right = 782.0
offset_bottom = 487.0
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="Options" parent="." instance=ExtResource("2_k0w1u")]
offset_left = 73.0
offset_top = 58.0
offset_right = 1204.0
offset_bottom = 652.0

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1och7")
volume_db = 5.0
bus = &"SFX"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
